Fix line-spacing of paragraphs

--- a/blogr-landing-page-main/styles.css
+++ b/blogr-landing-page-main/styles.css
@@ -190,6 +190,7 @@ div.content-row p {
   margin-bottom: 8vh;
   color: var(--paragraph-gray);
   width: 30vw;
+  line-height: 1.8rem;
 }
 
 div.content-row #editor-image {
